Added HTML to the sidebar, and made a placeholder function to start processing code

--- a/ermactually/package.json
+++ b/ermactually/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+  ],
+
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -23,19 +25,21 @@
         {
           "id":"ErmContainer",
           "title":"Erm View",
-          "icon": "resources/media/hampterIcon.svg"
+          "icon": "media/hampterIcon.svg"
         }
       ]
     },
     "views": {
       "ErmContainer": [
         {
-          "id": "ErmView",
-          "name": "Erm View"
+          "id": "ermactually.mainSidebarView",
+          "name": "Erm View",
+          "type": "webview"
         }
       ]
     }
   },
+  
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
