added openai basic implementation

--- a/ermactually/package.json
+++ b/ermactually/package.json
@@ -18,6 +18,10 @@
       {
         "command": "ermactually.ErmActually",
         "title": "ErmActually"
+      },
+      {
+        "command": "ermactually.setApiKey",
+        "title": "Set OpenAI API Key"
       }
     ],
     "viewsContainers": {
